# CVANALYZER

./: .dockerignore  .gitignore  Dockerfile  README.md  cf-config.json  deploy_azure.ps1  pyproject.toml  requirements.txt  test_assessment_recruiter.db-journal
.github/workflows/: aws-deploy.yml  azure-deploy.yml  deploy.yml
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  templating.py
app/routers/: api.py  auth.py  candidate_api.py  candidate_auth.py  pages.py
app/services/: evaluator_service.py  gemini_service.py  job_service.py  notification_service.py  payload_builder.py  reference_data.py  storage.py
app/static/css/: styles.css
app/static/js/: app.js  theme.js
app/templates/: base.html  dashboard.html  login.html
aws/: ecs-task-definition.template.json
cv_analyzer_api/: __init__.py  router.py  service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  homepage.css  index.css  main.jsx
frontend/src/api/: candidateClient.js  client.js
frontend/src/components/: Layout.jsx  TopNav.jsx
frontend/src/pages/: ApplicationsPage.jsx  AssessmentPage.jsx  CVAnalyzerPage.jsx  CandidatePortal.jsx  DashboardPage.jsx  HomePage.jsx  Login.jsx  LoginPage.jsx  PostJobPage.jsx  ProctoredAssessment.jsx  ReportViewPage.jsx
tests/: test_app.py
