[project]
name = "assessment-recruiter"
version = "0.2.0"
description = "FastAPI admin console for recruiter job posting and AI-powered assessment generation"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.44",
    "python-multipart>=0.0.20",
    "itsdangerous>=2.2.0",
    "PyJWT>=2.8.0",
    "google-generativeai>=0.8.0",
    "azure-communication-email>=1.0.0",
    "twilio>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q -p no:cacheprovider"
norecursedirs = ["pytest-cache-files-*"]
